tests/error/comptime/check_dereference06.bz
// error: invalid memory access of an object of type 'i32'
// note: in call to 'function foo(p: ?*i32) -> *i32'
// note: while evaluating expression at compile time
// note: address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo(p: ?*i32) -> *i32
{
	let i = 0;
	if (p != null)
	{
		*p;
	}
	return &i;
}

function test()
{
	(consteval {
		foo(foo(null));
	});
}
